tweaking management-api business objects in place with better required fields - generated Go models also reflect much better what we expect present
