# target/generated-sources/swagger/src/main/java/com/keytiles/api/model/management/v1/UserClass.java
@@ -70,14 +70,14 @@ public class UserClass implements Serializable{
 
   
   // @Generator: arg 'id': private final field because it is readonly (also non-null check as not nullable) 
-  // @Generator: arg 'version': non-nullable and does not have default value - we must enforce a non-null initial value 
-  // @Generator: arg 'email': non-nullable and does not have default value - we must enforce a non-null initial value 
+  // @Generator: arg 'version': mandatory field 
+  // @Generator: arg 'email': mandatory field 
   // @Generator: arg 'password': non-nullable and does not have default value - we must enforce a non-null initial value 
-  // @Generator: arg 'nickname': non-nullable and does not have default value - we must enforce a non-null initial value 
+  // @Generator: arg 'nickname': mandatory field 
   // @Generator: arg 'lastLoginTimestamp': private final field because it is readonly 
   // @Generator: arg 'createdTimestamp': private final field because it is readonly (also non-null check as not nullable) 
-  // @Generator: arg 'isEnabled': non-nullable and does not have default value - we must enforce a non-null initial value 
-  // @Generator: arg 'isKeytilesAdmin': non-nullable and does not have default value - we must enforce a non-null initial value 
+  // @Generator: arg 'isEnabled': mandatory field 
+  // @Generator: arg 'isKeytilesAdmin': mandatory field 
   @JsonCreator
   public UserClass(@JsonProperty("id") String id, @JsonProperty("lastLoginTimestamp") Integer lastLoginTimestamp, @JsonProperty("createdTimestamp") Integer createdTimestamp, @JsonProperty("version") Integer version, @JsonProperty("email") String email, @JsonProperty("password") String password, @JsonProperty("nickname") String nickname, @JsonProperty("isEnabled") Boolean isEnabled, @JsonProperty("isKeytilesAdmin") Boolean isKeytilesAdmin) {
     super();
